# chop

./: AUTHORS  Makefile.am  Makefile.in  README  chop.c  choputil.c  choputil.h  config.h.in  configure  configure.in  mkinstalldirs  tailor.h  version.h
