dnl Process this file with autoconf to produce a configure script.
AC_INIT(chop.c)
AM_INIT_AUTOMAKE(chop, 1.9)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST
AC_DEFINE_UNQUOTED(CONF_MACHTYPE,"${host}")

case $host in
  *mingw32*) AC_DEFINE(WIN32) ;;
esac

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

dnl Checks for library functions.

AC_OUTPUT(Makefile)
